--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web dev intro jenkins poll scm</title>
+    <title>Web dev intro jenkins</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
     </div>
 
     <div>
-        <p>this is a paragraph tag test 111</p>
+        <p>this is a paragraph</p>
     </div>
 
     <div>
